[package]
name = "egui-slippymap-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
log = "0.4.18"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }
